--- a/css/styles.css
+++ b/css/styles.css
@@ -181,8 +181,15 @@ color: #434455;
 /* Advantages section */
 
 .visually-hidden{
-display:none;
-}
+        position: absolute;
+        overflow: hidden;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        width: 1px;
+        margin: 0;
+        padding: 0;
+        border: 0;
+    }
 .advantages-list {
     display: flex;
     gap: 24px;
@@ -210,12 +217,11 @@ display:none;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .team-header-item{
-    margin-top: 32px;
     margin-bottom: 8px;
     text-align: center;
 }
 
-.employee{
+.card-text{
     padding: 32px 0;
     text-align: center;
 }
@@ -227,6 +233,7 @@ display:none;
     flex-basis: calc((100% - 48px) / 3);
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 48px;
 }
 .portfolio-list>p {
         font-size: 16px;
@@ -258,8 +265,11 @@ display:none;
 }
 .company-name-part-light{
     color: var(--CLOUD, #F4F4FD);
-    display: inline-block;
-    margin-bottom: 16px;
+
+}
+.company-name{
+display: inline-block;
+margin-bottom: 16px;
 }
 .todo{
         font-size: 16px;
