--- a/css/styles.css
+++ b/css/styles.css
@@ -180,16 +180,19 @@ color: #434455;
 
 /* Advantages section */
 
-.visually-hidden{
-        position: absolute;
-        overflow: hidden;
-        clip: rect(0 0 0 0);
-        height: 1px;
-        width: 1px;
-        margin: 0;
-        padding: 0;
-        border: 0;
-    }
+
+ .visually-hidden {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            border: 0;
+            padding: 0;
+            white-space: nowrap;
+            clip-path: inset(100%);
+            clip: rect(0 0 0 0);
+            overflow: hidden;
+}
 .advantages-list {
     display: flex;
     gap: 24px;
@@ -228,6 +231,9 @@ color: #434455;
 
 /* Portfolio section */
 
+.portfolio .container{
+    border: 1px solid #e7e9fc;
+}
 .portfolio-list{
     display: flex;
     flex-basis: calc((100% - 48px) / 3);
