--- a/css/styles.css
+++ b/css/styles.css
@@ -231,12 +231,9 @@ color: #434455;
 
 /* Portfolio section */
 
-.portfolio .container{
-    border: 1px solid #e7e9fc;
-}
+
 .portfolio-list{
     display: flex;
-    flex-basis: calc((100% - 48px) / 3);
     flex-wrap: wrap;
     gap: 24px;
     row-gap: 48px;
@@ -249,6 +246,7 @@ color: #434455;
 .portfolio-item{
     border: 1px solid var(--CORNFLOWER, #E7E9FC);
     width: 360px;
+    width: calc((100% - 48px) / 3);
 }
 .portfolio-header-item{
     margin-top: 32px;
@@ -258,6 +256,7 @@ color: #434455;
 .portfolio .card-text {
     padding: 32px 16px;
     text-align: left;
+    border: 1px solid #e7e9fc;
 }
 
 /* Footer section */
